fix: contrast colors

--- a/base/base.css
+++ b/base/base.css
@@ -5,9 +5,9 @@
     --color-white: #ffffff;
     --color-black: #000000;
     /* contrast colors */
-    --color-low-contrast: #5a5a5a;
+    --color-low-contrast: #504f4f;
     --color-high-contrast: #ececec;
-    --color-reduce-contrast: #9e9e9e;
+    --color-reduce-contrast: #747474;
     /* base color */
     --color-base-darker: #3d038d;
     --color-base-dark: #5100c2;
